--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
---upgrade pip
-flask
-discord
-asyncio
-dotenv
-akinator_python
-discord.ext
-subprocess
-os
-threading
+flask==3.0.3
+discord==2.3.2
+asyncio==3.4.3
+akinator_python==1.6.0
+dotenv==1.0.1
