--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ discord==2.3.2
 asyncio==3.4.3
 akinator_python==1.6.0
 google
+google.generativeai
+genai
 setuptools>=65.5.0
 wheel>=0.36.2
 python-dotenv
